# AI_Car

./: pyproject.toml  test_track.py
car/: __init__.py  drivetrain.py  tires.py
track/: __init__.py  display.py  track.py
